--- a/results/2019_1012_LOP_figures.Rmd
+++ b/results/2019_1012_LOP_figures.Rmd
@@ -92,16 +92,22 @@ fig2A <- with_control %>%
         axis.text.y=element_text(size=18,color="black"),
         panel.grid.major.x = element_line(color = "gray70"))
 fig2A
-# ggsave("Fig2A.pdf", plot=fig2A, width = 18, height = 3, units = "in", device = "pdf")
+ggsave("Fig2A.pdf", plot=fig2A, width = 18, height = 3, units = "in", device = "pdf")
+```
+
+```{r}
+qqnorm(with_control$normcov)
 ```
 
 > This is a mathematical representation of trisomy, so I can use this to go back and make overlay plots
 wihthout having to manually specify them.
 
 ```{r}
-trisomics <- with_control$sample[which(with_control$normcov >= mean(with_control$normcov) + 3 * sd(with_control$normcov))]
+cut_hi <- mean(with_control$normcov) + 3 * sd(with_control$normcov)
+trisomics <- with_control$sample[which(with_control$normcov >= cut_hi)]
 trisomics
 ```
+
 
 ```{r}
 chrom_overlay <- function(df, chr) {
@@ -271,7 +277,7 @@ for (i in sprintf('chr%02d', 1:12)) {
   labs(x = "", y = "Alca Tarma\nCopy Number") +
   # ggtitle("A") +
   scale_y_continuous(limits = c(0, 220), breaks = c(0, sc[4]*.25, sc[4]*.5, sc[4]*0.75, sc[4], sc[4]*1.25, sc[4]*1.5, sc[4]*1.75, sc[4]*2), labels = c(0,1,2,3,4,5,6,7,8)) +
-  scale_x_continuous(limits = c(0,6e7), breaks = seq(0, 6e7, by = 2e7), labels = seq(0, 60, by = 20)) +
+  scale_x_continuous(breaks = seq(0, 8e7, by = 2e7), labels = seq(0, 80, by = 20)) +
   facet_wrap(~chrom, nrow = 12, strip.position = "right") +
   theme(
     panel.grid.major.x = element_blank(),
